# software-architecture-learning

./: .gitignore  README.md  eslint.config.js  index.html  knip.json  package.json  vitest.config.js
docs/: ARCHITECTURE.md  DATA-MODEL.md  PROMPT-ENGINE.md  domains-and-interests.md  software-architecture-fundamentals.txt  table-of-contents.md
docs/follow-ups/: cyclegenerator-dry.md
reports/qa/: cloc.json  depcheck.txt  jscpd-report.json  jscpd.txt  jsinspect.json  knip.json  madge-circular.txt  ncu.json  scc.json  semgrep.json
scripts/: migrate-imports.js  sample-selection.js
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/__tests__/: setup.js
src/__tests__/context/: promptReducer.test.js
src/__tests__/data/: DomainWeighting.integration.test.js  ScenarioCoverage.test.js
src/__tests__/fixtures/: mockConcepts.js  mockScenarios.js  mockTemplates.js
src/__tests__/integration/: Enrichment.integration.test.js  EnrichmentDiversity.integration.test.js  HashtagValidation.integration.test.js  PromptGeneration.integration.test.js
src/__tests__/utils/: clipboard.test.js
src/components/ErrorBoundary/: ErrorBoundary.jsx
src/components/HowItWorks/: HowItWorks.jsx
src/context/: PromptContext.jsx  constants.js  promptReducer.js
src/data/: contextual-scenarios.json  core-concepts.json  lesson-templates.json  oblique-strategies.json
src/hooks/: usePrompts.js
src/styles/: error-boundary.css  ide-components.css  vscode-theme.css
src/utils/: advancedPromptGenerator.js  clipboard.js  logger.js
(+49 files in other folders)
